CHANGELOG

2.0.22
UTILS:
* pa_rule-edit - get back actions=user-add:USER / user-remove:USER / user-set-any for PAN-OS API mode

BUGFIX:
* pa_upload-config in=api://MGMT-IP/merged-config - bringing this feature back to specify to download running-/merged-/candidate-config
* framework class ObjStore - bugfix - extend validation about existing variable setting
* framework class RuleStore | bugfix for Fawkes Container / DeviceCloud

GENERAL:


2.0.21 (20211106)
UTILS:
* pa_securityprofile-edit | extend class with threatException - display it with actions=display
* pa_securityProfil-edit | introduce 'filter=( exception is.set) / (exception has XYZ)'
* pa_securityprofil-edit | introduce actions=exporttoexcel:FILE.html
* pa_securityprofil-edit - improve JSON response stdout with argument shadow-json
* pa_application-edit | introduce 'filter=(name regex /XYZ/)'
* pa_rule-edit | introduce 'filter=(app has.recursive XYZ)'

BUGFIX:
* pa_securityprofile-edit | bugfix based on filter=(location is XYZ)
* pa_service-merger | class Merger - bugfix for service-merger | variable not correctly declared
* pa_address-edit | actions=replaceByMembersAndDelete add arguments [:keepGroupName] choices: tag, description
* pa_rule-edit actions=from-/to-calulcate-zone BUGFIX - PAN-OS API mode is now working again

GENERAL:


2.0.20 (20211025)
UTILS:
* pa_address-edit | actions=decommission - improvement for better object decommission handling
* pa_service-edit | introduce actions=decommission
* pa_address-edit | improve actions=display for dynamic Addressgroup
* pa_address-edit | improve 'filter=((name regex /$$ipv4$$/) and (value is.included-in.name) )' - to match only full IP-Address
* pa_panos-xml-issue-detector | extend check for /config/readonly/devices/entry[@name='localhost.localdomain']/template

BUGFIX:
* pa_appid-enabler | bugfix related to methods move to class UTIL
* class ObjRulecontainer / AddressGroup - to add object with same name but different owner of DG hierarchy only once